added hero section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
     </header>
     
     
+    <section class="hero">
+        <div class="container hero-content">
+            <span class="badge">● Early Access Now Open</span>
+            <h1>Structured Thinking,<br><span class="text-green">Not Just Note-Taking.</span></h1>
+            <p>A holistic space to store notes, links, and learning summaries — designed to help you think clearly, connect ideas, and build lasting long-term knowledge.</p>
+            <div class="hero-btns">
+                <button class="btn-green">Start Building Your Vault ➔</button>
+                <button class="btn-outline">See How It Works</button>
+            </div>
+        </div>
+    </section>
+
 
 </body>
 </html>
