--- a/index.html
+++ b/index.html
@@ -67,5 +67,25 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
     </section>
 
 
+    <section class="solution">
+        <div class="container solution-container">
+            <div class="solution-image">
+                <img src="assets/knowledge.png" alt="">
+            </div>
+            <div class="solution-text">
+                <span class="label-green">THE SOLUTION</span>
+                <h2>Your Second Brain, Structured By Design.</h2>
+                <p>Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+                <ul class="check-list">
+                    <li><img src="assets/CheckCircle.png" alt=""> Capture ideas with structure built-in from day one</li>
+                    <li><img src="assets/CheckCircle.png" alt=""> Connect related concepts automatically as you write</li>
+                    <li><img src="assets/CheckCircle.png" alt=""> Build lasting knowledge through reflection prompts</li>
+                    <li><img src="assets/CheckCircle.png" alt=""> Find anything instantly with semantic search</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 </html>
