--- a/index.html
+++ b/index.html
@@ -86,7 +86,30 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
         </div>
     </section>
 
-    
+    <section>
+        <div class="cta-container">
+        <h1>Ready To Think More Clearly?</h1>
+        <p>Join thousands of learners who are building their personal knowledge vaults.<br>
+        Start free, no credit card required.</p>
+        <button class="btn-green"> Get Early Access<img src="assets/ArrowRight.png" alt=""></button>
+        <span class="small-text">Free during early access • No credit card needed</span>
+    </div>
+    </section>
+
+    <footer>
+        <div class="container footer-content">
+            <div class="footer-logo">
+                <img src="assets/logo-footer.png" alt="">
+            </div>
+            <div class="social-links">
+                <p>Social Links</p>
+                <span class="footer-icon "><a href="#"><img src="assets/Vector.png" alt=""></a></span>
+                    <span class="footer-icon "> <a href="#"><img src="assets/Vector.png" alt=""></a></span>
+                        <span class="footer-icon"> <a href="#"><img src="assets/Vector.png" alt=""></a></span>
+            </div>
+        </div><hr>
+        <p class="copyright">© 2024 Personal Knowledge Vault. All rights reserved.</p>
+    </footer> 
 
 
 </body>
